cluster/apps/adminer/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: spuxx-dev
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:latest
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 9999
