cluster/apps/adminer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: spuxx-dev
spec:
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
